# distrand

./: .gitignore  README.md  __init__.py  distrand.py  pyproject.toml  test_distrand.py
examples/: usage_demo.py
src/distrand/: distrand.py
tests/: test_distrand.py
